<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="workshop8.AgentDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/website"
                android:id="@+id/btnWebsite"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="#336699"
                android:textStyle="bold"
                android:textSize="20sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/tollfree"
                android:id="@+id/btnPhone"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="#336699"
                android:textSize="20sp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/email"
                android:id="@+id/btnEmail"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="#336699"
                android:textSize="20sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/titleAgentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/titleAgent"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/agent_name"
                android:id="@+id/textViewFirstName"
                android:layout_weight="2"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtFirstName"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lname"
                android:id="@+id/textViewLastName"
                android:layout_weight="2"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtLastName"
                android:layout_weight="1"
                android:gravity="left"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/initial"
                android:id="@+id/textViewMiddleInitial"
                android:layout_weight="2"
                android:visibility="gone" />

             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtMiddleInitial"
                android:layout_weight="1"
                android:gravity="left"
                 android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/phone"
                android:id="@+id/textViewBusPhone"
                android:layout_weight="2"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtBusPhone"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:id="@+id/textViewEmail"
                android:layout_weight="2"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtEmail"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/position"
                android:id="@+id/textViewPosition"
                android:layout_weight="2"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/txtAgtPosition"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/agency"
                android:id="@+id/textViewAgencyId"
                android:layout_weight="2"  />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unavailable"
                android:id="@+id/txtAgencyId"
                android:layout_weight="1"
                android:gravity="left" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
